finalizacion de tests